[project]
name = "polarspark"
version = "0.1.0"
description = "A drop-in replacement for PySpark that uses Polars instead of Spark"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["polars>=1.31.0"]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
 "pyspark>=4.0.0",
 "pytest>=8.4.1",
 "ruff>=0.12.2",
]

[tool.mypy]
files = ["polarspark"]
strict = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # Ignore absence of trailing commas, causes conflicts with formatter.
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
